# terminal-dino

./: Cargo.toml  LICENSE  README.md
src/: game.rs  input.rs  main.rs  render.rs
